--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [[bin]]
 name = "christmas-tree"
-path = "christmas-tree/src/christmasTree.rs"
+path = "src/christmasTree.rs"
 
 [dependencies]
 colored = "2.1.0"
